RESOLVED FIXED116099
[Qt] UrlLoader::loadNext is broken in MiniBrowser
https://bugs.webkit.org/show_bug.cgi?id=116099
Summary [Qt] UrlLoader::loadNext is broken in MiniBrowser
Hyungchan Kim
Reported 2013-05-14 05:13:28 PDT
[Qt] UrlLoader::loadNext is broken in MiniBrowser
Attachments
Patch (3.96 KB, patch)
2013-05-14 05:22 PDT, Hyungchan Kim
no flags
Patch (3.85 KB, patch)
2013-05-16 06:50 PDT, Hyungchan Kim
no flags
Hyungchan Kim
Comment 1 2013-05-14 05:22:30 PDT
Hyungchan Kim
Comment 2 2013-05-14 05:24:32 PDT
$ cat test_urls http://www.google.com http://naver.com $ WebKitBuild/Release/bin/MiniBrowser -r test_urls WARNING: This project is using the experimental QML API extensions for QtWebKit and is therefore tied to a specific QtWebKit release. WARNING: The experimental API will change from version to version, or even be removed. You have been warned! QObject::connect: No such signal QQuickWebViewExperimentalExtension::loadStarted() QObject::connect: No such signal QQuickWebViewExperimentalExtension::loadSucceeded() QObject::connect: No such signal QQuickWebViewExperimentalExtension::loadFailed(QDesktopWebView::ErrorType, int, const QUrl&) Loading http://www.google.com ......1 Number of leaked pixmaps: 9
Jocelyn Turcotte
Comment 3 2013-05-16 05:34:39 PDT
Comment on attachment 201701 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=201701&action=review > Tools/MiniBrowser/qt/UrlLoader.cpp:49 > + connect(this, SIGNAL(loadSucceeded()), this, SLOT(frameLoadFinished())); > + connect(this, SIGNAL(loadFailed()), this, SLOT(frameLoadFinished())); loadSucceeded and loadFailed have the same effect, and UrlLoader is unlikely going to have external components using its API. So no need to have two different signals, just use a loadFinished() signal that is triggered by LoadSucceededStatus, LoadFailedStatus and LoadStoppedStatus. > Tools/MiniBrowser/qt/UrlLoader.cpp:141 > + We don't usually put an empty line between the cases.
Hyungchan Kim
Comment 4 2013-05-16 06:50:57 PDT
Jocelyn Turcotte
Comment 5 2013-05-16 07:02:23 PDT
Comment on attachment 201951 [details] Patch r=me, please set the "cq" flag to "?" on the attachment if you would like to use the commit queue to land the patch.
WebKit Commit Bot
Comment 6 2013-05-16 19:44:11 PDT
Comment on attachment 201951 [details] Patch Clearing flags on attachment: 201951 Committed r150229: <http://trac.webkit.org/changeset/150229>
WebKit Commit Bot
Comment 7 2013-05-16 19:44:13 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.