[Qt] UrlLoader::loadNext is broken in MiniBrowser https://bugs.webkit.org/show_bug.cgi?id=116099

Patch by Hyungchan Kim <hyungchan2.kim@lge.com> on 2013-05-16
Reviewed by Jocelyn Turcotte.

QQuickWebView's 3 signals(loadStarted, loadSucceeded, loadFailed)
are not available any more. So, UrlLoader::loadNext was broken
because it failed to connect to those signals.

* MiniBrowser/qt/UrlLoader.cpp:
(UrlLoader::UrlLoader):
(UrlLoader::loadingChanged):
* MiniBrowser/qt/UrlLoader.h:
(UrlLoader):

Canonical link: https://commits.webkit.org/134651@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150229 268f45cc-cd09-0410-ab3c-d52691b4dbfc